trunk/Archive2/5d/6983cb2e099eac/output
main.cpp:128:5: error: static_assert failed "WHAT"
    static_assert(has_arity<2, decltype(lambda)>::value, "WHAT");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
